<resources>
    <string name="app_name">Today</string>
    <string name="action_settings">Settings</string>
    <string name="welcomme">Welcome</string>
    <string name="to">To</string>
    <string name="todays_world">TODAYS WORLD</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="skip">SKIP</string>
    <string name="title_activity_login">Log In</string>
    <string name="Rs">\u20B9</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_activity_detail_category">DetailCategoryActivity</string>

    <string name="sort">SORT</string>
    <string name="filters">FILTERS</string>
    <string name="title_activity_shop_deatail">ShopDeatailActivity</string>
    <string name="title_activity_product_detail_activty">ProductDetailActivty</string>
    <string name="addcart">Add To..</string>
    <string name="buynow">Buy Now</string>


</resources>
